--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -3,7 +3,7 @@ $silver-200: #ececec;
 $silver-100: #f9faff;
 $gray: #c2c2c2;
 $darkBlue-900: #363853;
-$dark: #31352b;
+$dark: #31352B;
 
 %rubik-300 {
   font-family: 'Rubik-Light', sans-serif;
@@ -24,4 +24,3 @@ $dark: #31352b;
   font-family: 'Rubik-Medium', sans-serif;
   font-weight: 500;
 }
-
