--- a/app/html/components/_footer-scripts.html
+++ b/app/html/components/_footer-scripts.html
@@ -1,3 +1,6 @@
-<script src="js/main.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script src="../../js/mixitup.min.js"></script>
+<script src="../../js/main.min.js"></script>
 </body>
+
 </html>
