--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,7 +1,68 @@
-body{
+body {
   background-color: $silver-100;
   color: $dark;
   @extend %rubik-400;
   font-size: 20px;
   line-height: 1.3;
+}
+
+.section {
+  padding-bottom: 120px;
+}
+
+.container {
+  max-width: 1200px;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.title {
+  @extend %rubik-500;
+  font-size: 36px;
+  color: $darkBlue-900;
+  margin-bottom: 60px;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.logo {
+  transition: box-shadow .5s ease-in-out, opacity .3s linear;
+
+  &:focus {
+    border-radius: 5px;
+    box-shadow: 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
+  }
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
+}
+
+.btn {
+  border-radius: 6px;
+  outline: 0;
+  color: #fff;
+  background-color: $orange-900;
+  display: flex;
+  align-items: center;
+}
+
+.link {
+  text-decoration: underline 1px $darkBlue-900;
 }
