--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -21,8 +21,8 @@ h4,
 h5,
 h6,
 p,
-ul[class],
-ol[class],
+ul,
+ol,
 li,
 figure,
 figcaption,
@@ -38,7 +38,6 @@ ul[class] {
 
 img {
   max-width: 100%;
-  display: block;
 }
 
 input,
@@ -46,8 +45,15 @@ button,
 textarea,
 select {
   font: inherit;
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 a {
   text-decoration: none;
+  color: inherit;
 }
