--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,479 +1,18 @@
 @import 'vars';
+@import 'mixins';
+@import 'colors';
 @import 'fonts';
-@import 'global';
 @import 'reset';
-
-.header__inner {
-  display: flex;
-  justify-content: space-between;
-  padding: 60px 0;
-  align-items: center;
-}
-
-.menu {
-  display: flex;
-  align-items: center;
-
-  &__list {
-    display: flex;
-    margin-right: 60px;
-  }
-
-  &__link {
-    font-size: 18px;
-    border-radius: 5px;
-    outline: 0;
-    transition: box-shadow cubic-bezier(0.075, 0.82, 0.165, 1), color linear .5s;
-
-    &:not(:last-child) {
-      margin-right: 40px;
-    }
-
-    &:focus {
-      box-shadow: 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
-    }
-
-    &:hover {
-      color: $orange-900;
-    }
-
-    &:active {
-      text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
-      ;
-    }
-
-    &--current {
-      color: $orange-900;
-    }
-  }
-}
-
-.user-nav {
-  display: flex;
-  align-items: center;
-
-  &__link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 44px;
-    height: 44px;
-    border-radius: 5px;
-    background-color: $silver-100;
-    position: relative;
-    outline: 0;
-    transition: background-color linear .5s, box-shadow linear .5s, color cubic-bezier(0.165, 0.84, 0.44, 1) .5s;
-
-    &::before {
-      position: absolute;
-      content: '';
-      min-width: 18px;
-      min-height: 18px;
-      mask-image: url('../images/sprite.svg#icon-search');
-      mask-repeat: no-repeat;
-      mask-size: contain;
-      mask-position: center;
-      background-color: $darkBlue-900;
-    }
-
-    &--cart::before {
-      mask-image: url('../images/sprite.svg#icon-cart');
-    }
-
-    &:not(:last-child) {
-      margin-right: 35px;
-    }
-
-    &:focus,
-    &:active {
-      background-color: rgba(255, 104, 56, 0.1);
-      ;
-    }
-
-    &:focus {
-      box-shadow: 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
-    }
-
-    &:hover {
-      background-color: $orange-900;
-    }
-
-    &:hover::before {
-      background-color: #fff;
-    }
-
-    &:hover span {
-      background-color: #fff;
-      color: $orange-900;
-    }
-  }
-
-  &__num {
-    position: absolute;
-    border-radius: 7px;
-    background-color: $orange-900;
-    min-width: 14px;
-    height: 14px;
-    padding: 2px;
-    font-size: 10px;
-    line-height: 1;
-    color: #fff;
-    text-align: center;
-    top: 7px;
-    right: 5px;
-  }
-}
-
-.hero {
-  &__inner {
-    display: flex;
-    align-items: center;
-    min-height: calc(100vh - 159px);
-    background-repeat: no-repeat;
-    background-size: 560px;
-    background-position: center right;
-  }
-
-  &__info {
-    display: flex;
-    flex-direction: column;
-    max-width: 480px;
-    width: 100%;
-  }
-
-  &__title {
-    @extend %rubik-500;
-    font-size: 66px;
-    color: $darkBlue-900;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-
-    & span {
-      color: $orange-900;
-      display: block;
-    }
-  }
-
-  &__text {
-    line-height: 1.5;
-    margin-bottom: 20px;
-  }
-
-  &__links {
-    display: flex;
-    align-items: center;
-  }
-
-  &__btn {
-    width: fit-content;
-    padding: 12px 28px;
-    margin-right: 25px;
-  }
-}
-
-.categories {
-  text-align: center;
-
-  &__wrapper {
-    columns: 5;
-    column-gap: 30px;
-    margin-bottom: 60px;
-  }
-
-  &__item {
-    margin-bottom: 30px;
-  }
-}
-
-.categories-filter {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 45px;
-
-  &__item {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
-    &:not(:last-child) {
-      margin-right: 20px;
-    }
-  }
-
-  &__btn {
-    padding: 22px 32px 22px 86px;
-    background-color: #fff;
-    border-radius: 5px;
-    color: $darkBlue-900;
-    position: relative;
-    box-shadow: 0px 0px 0px 1px $silver-200;
-    transition: box-shadow .3s linear, background-color .3s ease-in-out, color .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  }
-
-  &__btn::before {
-    content: '';
-    height: 44px;
-    width: 44px;
-    position: absolute;
-    left: 32px;
-    bottom: 13px;
-    background-color: $darkBlue-900;
-    mask-image: url('../images/sprite.svg#icon-category-burger');
-    mask-repeat: no-repeat;
-    mask-position: center;
-  }
-
-  &__btn:focus {
-    box-shadow: 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
-  }
-
-  &__btn:hover {
-    box-shadow: 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
-    background-color: rgba(255, 104, 56, 0.1);
-    color: $orange-900;
-  }
-
-  &__btn:hover::before {
-    background-color: $orange-900;
-  }
-
-  &__btn:active {
-    box-shadow: inset 0px -5px 12px rgba(255, 104, 56, 0.2);
-    background-color: #fff;
-  }
-
-  &__btn--pizza::before {
-    mask-image: url('../images/sprite.svg#icon-category-pizza');
-  }
-
-  &__btn--sandwich::before {
-    mask-image: url('../images/sprite.svg#icon-category-sandvich');
-  }
-
-  &__btn--asian::before {
-    mask-image: url('../images/sprite.svg#icon-category-asia');
-  }
-
-  &__btn--sets::before {
-    mask-image: url('../images/sprite.svg#icon-category-dish');
-  }
-
-  &__btn--current {
-    background-color: $orange-900;
-    color: #fff;
-
-    &::before {
-      background-color: #fff;
-    }
-  }
-}
-
-.product-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #fff;
-  border-radius: 5px;
-  align-items: center;
-  text-align: center;
-  gap: 10px;
-  max-width: 210px;
-  height: 300px;
-  padding: 20px 15px;
-  box-shadow: 0px 0px 0px 1px $silver-200;
-  transition: box-shadow .5s linear;
-
-  &__name {
-    font-size: 15px;
-  }
-
-  &__price {
-    @extend %rubik-500;
-    font-size: 15px;
-    line-height: 1.4;
-    color: $darkBlue-900;
-  }
-
-  &__btn {
-    bottom: 0;
-    background-color: $orange-900;
-    border-radius: 6px;
-    color: #fff;
-    padding: 7px 14px;
-    font-size: 14px;
-  }
-
-  &:hover {
-    box-shadow: 0px 0px 0px 1px #FF6838;
-  }
-}
-
-.footer {
-  &__inner {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 60px;
-  }
-
-  &__info {
-    margin-right: 70px;
-  }
-
-  &__logo {
-    display: block;
-    margin-bottom: 30px;
-  }
-
-  &__menu {
-    columns: 3;
-    max-width: 494px;
-    width: 100%;
-
-    &-link {
-      margin-bottom: 20px;
-      font-size: 18px;
-    }
-  }
-}
-
-.subscribe {
-  &__item {
-    margin-bottom: 12px;
-  }
-
-  &__field {
-    padding: 13px 15px;
-    max-width: 200px;
-    max-height: 44px;
-    border-radius: 5px;
-    background-color: #fff;
-    outline: 1px solid $gray;
-    transition: box-shadow .5s linear, color .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-
-    &::placeholder {
-      font-size: 14px;
-      color: $gray;
-    }
-
-    &:focus {
-      box-shadow: 0px 0px 0px 2px #FF6838;
-    }
-
-    &:hover::placeholder {
-      color: $darkBlue-900;
-    }
-  }
-
-  &__btn {
-    padding: 13px 37px 13px 74px;
-    position: relative;
-    font-size: 14px;
-    max-width: 200px;
-    width: 100%;
-    transition: box-shadow .5s linear, background-color .3s cubic-bezier(0.175, 0.885, 0.32, 1.275), color .5s ease-out;
-
-    &::before {
-      content: '';
-      height: 16px;
-      width: 16px;
-      position: absolute;
-      background-color: #fff;
-      mask-repeat: no-repeat;
-      mask-image: url('../images/sprite.svg#icon-telegram');
-      mask-position: center;
-      left: 37px;
-    }
-
-    &:focus {
-      background-color: rgba(255, 104, 56, 0.1);
-      box-shadow: 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
-      color: $orange-900;
-
-      &::before {
-        background-color: $orange-900;
-      }
-    }
-
-    &:hover {
-      box-shadow: 0px 5px 12px rgba(255, 104, 56, 0.2), 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
-      background-color: #fff;
-      color: $orange-900;
-
-      &::before {
-        background-color: $orange-900;
-      }
-    }
-
-    &:active {
-      background-color: #FFF2ED;
-    }
-  }
-}
-
-.contacts {
-  &__list {
-    margin-bottom: 15px;
-  }
-
-  &__item {
-    font-size: 16px;
-    padding-left: 31px;
-    position: relative;
-
-    &:not(:last-child) {
-      margin-bottom: 15px;
-    }
-
-    &::before {
-      content: '';
-      position: absolute;
-      background-color: $dark;
-      height: 22px;
-      width: 22px;
-      mask-image: url('../images/sprite.svg#icon-location');
-      mask-repeat: no-repeat;
-      mask-position: center;
-      left: 0;
-    }
-
-    &--tel::before {
-      mask-image: url('../images/sprite.svg#icon-call');
-    }
-
-    &--mail::before {
-      mask-image: url('../images/sprite.svg#icon-message');
-    }
-  }
-
-  &__social {
-    display: flex;
-    gap: 13px;
-
-    &-link {
-      display: block;
-      width: 39px;
-      height: 39px;
-      background-color: $silver-200;
-      border-radius: 50%;
-      padding: 10px;
-      background-position: center;
-      background-size: 20px 20px;
-      background-repeat: no-repeat;
-    }
-  }
-}
-
-.copy {
-  text-align: center;
-  padding: 30px 15px;
-  background-color: $darkBlue-900;
-
-  &__link {
-    color: #fff;
-    font-size: 14px;
-    line-height: 1;
-  }
-}
-
-@import 'media';
+@import 'libs';
+@import 'global';
+
+@import 'parts/header';
+@import 'parts/hero';
+@import 'parts/popular';
+@import 'parts/categories';
+@import 'parts/product-card';
+@import 'parts/features';
+@import 'parts/restaurants';
+@import 'parts/restaurant-card';
+@import 'parts/testimonials';
+@import 'parts/footer';
