--- a/app/html/components/_footer.html
+++ b/app/html/components/_footer.html
@@ -1,70 +1,102 @@
 <footer class="footer">
   <div class="container">
-    <div class="footer__inner">
-      <div class="footer__info">
+    <section class="footer__content">
+      <h2 class="sr-only">Додаткова інформація</h2>
+      <div class="footer__subscription">
+        <h3 class="sr-only">Інформація про підписку</h3>
         <a class="logo footer__logo" href="#">
           <img class="logo__img" src="../../images/logo.svg" alt="site logo" width="200" height="39">
         </a>
-        <form class="subscribe">
-          <div class="subscribe__item">
-            <label class="subscribe__title" for="email">
-              <div class="sr-only">Вписати e-mail</div>
-            </label>
-            <input class="subscribe__field" type="text" id="email" placeholder="Ваш email" required="required">
-          </div>
-          <button class="btn subscribe__btn" type="submit">Підписатися</button>
-        </form>
+        <div class="subscription">
+          <form class="form">
+            <label class="sr-only" for="subscription">Ваш email для підписки</label>
+            <input class="form__field" type="email" id="subscription" name="subscription" placeholder="Ваш email"
+              required="required">
+            <button class="btn subscription__btn icon icon--send" type="submit">Підписатися</button>
+          </form>
+        </div>
       </div>
-      <ul class="footer__menu">
-        <li class="footer__menu-link">Як це працює</li>
-        <li class="footer__menu-link">Продукти</li>
-        <li class="footer__menu-link">Страви</li>
-        <li class="footer__menu-link">Меню</li>
-        <li class="footer__menu-link">Про нас</li>
-        <li class="footer__menu-link">Новини</li>
-        <li class="footer__menu-link">Партнери</li>
-        <li class="footer__menu-link">ЧаПи</li>
-        <li class="footer__menu-link">Застосунок</li>
-        <li class="footer__menu-link">Блог</li>
-        <li class="footer__menu-link">Що нового?</li>
-        <li class="footer__menu-link">Мапа сайту</li>
-      </ul>
-      <adress class="contacts">
-        <ul class="contacts__list">
-          <li class="contacts__item">
-            <a class="adress" href="#">вул. Т.Г.Шевченка, 1</a>
+      <div class="footer__nav">
+        <h3 class="sr-only">Навігація по сайту</h3>
+        <ul class="menu footer__menu">
+          <li class="menu__item">
+            <a class="menu__link" href="#">Як це працює</a>
           </li>
-          <li class="contacts__item contacts__item--tel">
-            <a class="phone" href="tel:+380501112233">380501112233</a>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Продукти</a>
           </li>
-          <li class="contacts__item contacts__item--mail">
-            <a class="email" href="mailto:support@sfood.com">support@sfood.com</a>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Страви</a>
           </li>
-        </ul>
-        <ul class="contacts__social">
-          <li class="contacts__social-item">
-            <a class="contacts__social-link" href="#"
-              style="background-image: url('../../images/sprite.svg#icon-facebook');">
-              <span class="sr-only">Перейти до Фейсбук</span>
-            </a>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Меню</a>
           </li>
-          <li class="contacts__social-item">
-            <a class="contacts__social-link" href="#"
-              style="background-image: url('../../images/sprite.svg#icon-twitter');">
-              <span class="sr-only">Перейти до Твіттер</span>
-            </a>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Про нас</a>
           </li>
-          <li class="contacts__social-item">
-            <a class="contacts__social-link" href="#"
-              style="background-image: url('../../images/sprite.svg#icon-instagram');">
-              <span class="sr-only">Перейти до Інстаграм</span>
-            </a>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Новини</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Партнери</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">ЧаПи</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Застосунок</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Блог</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Що нового?</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Мапа сайту</a>
           </li>
         </ul>
-      </adress>
-    </div>
+      </div>
+      <div class="footer__contacts">
+        <h4 class="sr-only">Контактна інформація, соцмережі</h4>
+        <adress class="contacts">
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <a class="contacts__link icon icon--address" href="#">вул. Т.Г.Шевченка, 1</a>
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__link icon icon--phone" href="tel:+380501112233">380501112233</a>
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__link icon icon--mail" href="mailto:support@sfood.com">support@sfood.com</a>
+            </li>
+          </ul>
+          <ul class="social">
+            <li class="social__item">
+              <a class="social__link" href="#">
+                <span class="sr-only">Перейти до Фейсбук</span>
+                <span class="social__icon"
+                  style="-webkit-mask-image: url('../../images/sprite.svg#icon-facebook'); mask-image: url('../../images/sprite.svg#icon-facebook')"></span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">
+                <span class="sr-only">Перейти до Твіттер</span>
+                <span class="social__icon" style="-webkit-mask-image: url('../../images/sprite.svg#icon-twitter'); mask-image: url('../../images/sprite.svg#icon-twitter');"></span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">
+                <span class="sr-only">Перейти до Інстаграм</span>
+                <span class="social__icon" style="-webkit-mask-image: url('../../images/sprite.svg#icon-instagram'); mask-image: url('../../images/sprite.svg#icon-instagram');"></span>
+              </a>
+            </li>
+          </ul>
+        </adress>
+      </div>
+    </section>
   </div>
-  <div class="copy">
-    <a class="copy__link" href="#">© 2023 Simple Food</a>
+  <div class="footer__bottom">
+    &copy; 2023 Simple Food
   </div>
 </footer>
