--- a/app/html/components/_head.html
+++ b/app/html/components/_head.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simple Food | Головна сторінка</title>
   <link rel="stylesheet" href="../../css/style.min.css">
   <link rel="apple-touch-icon" sizes="180x180" href="../../images/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../../images/favicon/favicon-32x32.png">
@@ -12,6 +13,5 @@
   <link rel="mask-icon" href="../../images/favicon/safari-pinned-tab.svg" color="#ff6838">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <title>Simple Food</title>
 </head>
 <body>
