--- a/app/html/components/_header.html
+++ b/app/html/components/_header.html
@@ -1,25 +1,32 @@
 <header class="header">
   <div class="container">
-    <div class="header__inner">
-      <a class="logo" href="#">
-        <img class="logo__img" src="../../images/logo.svg" alt="site logo" width="200" height="39">
-      </a>
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__link menu__link--current">Головна</li>
-          <li class="menu__link">Страви</li>
-          <li class="menu__link">Контакти</li>
+      
+      <nav class="header__nav">
+        <a class="logo" href="#">
+          <img class="logo__img" src="../../images/logo.svg" alt="site logo" width="200" height="39">
+        </a>
+        <ul class="menu">
+          <li class="menu__item">
+            <a class="menu__link menu__link--current" href="#">Головна</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Страви</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Контакти</a>
+          </li>
         </ul>
-        <div class="user-nav">
-          <button class="user-nav__link user-nav__link--search" type="button">
-            <span class="sr-only">Пошук</span>
+        <div class="header__action">
+          <button class="btn-sm icon icon--search" type="button">
+            <span class="sr-only">Шукати товари</span>
           </button>
-          <button class="user-nav__link user-nav__link--cart" href="#">
-            <span class="user-nav__num">4</span>
-            <span class="sr-only">Перейти до кошика</span>
+          <button class="btn-sm icon icon--сart header__btn" type="button">
+            <span class="sr-only">
+              Переглянути кошик. Кількість товарів у кошику:
+            </span>
+            <span class="btn-counter">4</span>
           </button>
         </div>
       </nav>
-    </div>
   </div>
 </header>
