--- a/app/html/components/_hero.html
+++ b/app/html/components/_hero.html
@@ -1,18 +1,18 @@
-<section class="section hero">
+<h1 class="sr-only">Сервіс доставки SimpleFood - номер один у місті Київ</h1>
+<section class="section hero mb-120" style="background-image: url(../../images/content/scooter_guy.png);">
+  <h2 class="sr-only">Особливості сервісу доставки SimpleFood</h2>
   <div class="container">
-    <div class="hero__inner" style="background-image: url(../../images/content/scooter_guy.png);">
-      <div class="hero__info">
-        <h2 class="hero__title">
-          Доставка <span>за 15 ХВИЛИН</span> 
-        </h2>
-        <p class="hero__text">
-          Найшвидший сервіс доставки їжі у вашому місті. Якщо запізнемось - то доставка за наш рахунок
-        </p>
-        <div class="hero__links">
-          <a class="btn hero__btn" href="#">Замовити</a>
-          <a class="link hero__link" href="#">Детальніше</a>
-        </div>
-      </div>
+    <h2 class="hero__title">
+      Доставка <span class="text-orange">за 15 ХВИЛИН</span> 
+    </h2>
+    <div class="hero__description">
+      <p>
+        Найшвидший сервіс доставки їжі у вашому місті. Якщо запізнемось - то доставка за наш рахунок
+      </p>
+    </div>
+    <div class="hero__links">
+      <a class="btn hero__btn" href="#">Замовити</a>
+      <a class="link hero__link" href="#">Детальніше</a>
     </div>
   </div>
 </section>
