--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,34 +1,30 @@
 @font-face {
-  font-family: 'Rubik-Light';
-  src: url('../fonts/Rubik-Light.woff2') format("woff2"),
-    url('../fonts/Rubik-Light.woff') format("woff");
+  font-family: 'Rubik';
+  src: url('../fonts/Rubik-Light.woff2') format("woff2");
   font-weight: 300;
   font-display: swap;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Rubik-Regular';
-  src: url('../fonts/Rubik-Regular.woff2') format("woff2"),
-    url('../fonts/Rubik-Regular.woff') format("woff");
+  font-family: 'Rubik';
+  src: url('../fonts/Rubik-Regular.woff2') format("woff2");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Rubik-Italic';
-  src: url('../fonts/Rubik-Italic.woff2') format("woff2"),
-    url('../fonts/Rubik-Italiс.woff') format("woff");
+  font-family: 'Rubik';
+  src: url('../fonts/Rubik-Italic.woff2') format("woff2");
   font-weight: 400;
   font-display: swap;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'Rubik-Medium';
-  src: url('../fonts/Rubik-Medium.woff2') format("woff2"),
-    url('../fonts/Rubik-Medium.woff') format("woff");
+  font-family: 'Rubik';
+  src: url('../fonts/Rubik-Medium.woff2') format("woff2");
   font-weight: 500;
   font-display: swap;
   font-style: normal;
