--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,13 +1,15 @@
 body {
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
   background-color: $silver-100;
   color: $dark;
-  @extend %rubik-400;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.3;
 }
 
-.section {
-  padding-bottom: 120px;
+.wrapper {
+  overflow-x: hidden;
+  padding-top: 159px;
 }
 
 .container {
@@ -17,11 +19,269 @@ body {
   margin: 0 auto;
 }
 
+
+.btn-sm {
+  position: relative;
+  border-radius: 5px;
+  min-width: 44px;
+  height: 44px;
+  padding: 5px;
+  background-color: $silver-100;
+  outline: 2px solid transparent;
+  transition: outline-color .3s ease-in-out, background-color .3s ease-in-out;
+
+  &:focus {
+    outline-color: rgba($orange-900, 0.7);
+    background-color: rgba($orange-900, 0.1);
+  }
+
+  &:hover {
+    background-color: $orange-900;
+  }
+
+  &:active {
+    outline-color: transparent;
+    background-color: rgba($orange-900, 0.1);
+  }
+}
+
+.btn-md {
+  font-size: 14px;
+  padding: 7px 14px;
+  letter-spacing: 0;
+
+}
+
+.btn {
+  display: inline-block;
+  background-color: $orange-900;
+  color: $white;
+  padding: 12px 32px;
+  font-size: 18px;
+  letter-spacing: 0.03em;
+  border-radius: 6px;
+  outline: 3px solid transparent;
+  transition: color 0.3s ease-in-out, outline-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+
+  &:focus {
+    background-color: rgba($orange-900, 0.1);
+    color: $orange-900;
+    outline-color: rgba($orange-900, 0.7);
+  }
+
+  &:hover {
+    background-color: $white;
+    color: $orange-900;
+    box-shadow: 0 5px 12px 0 rgba($orange-900, 0.2);
+  }
+
+  &:active {
+    background-color: rgba($orange-900, 0.1);
+    color: $orange-900;
+    outline-color: transparent;
+    box-shadow: none;
+  }
+}
+
+.icon {
+  min-width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &::before {
+    content: '';
+    min-width: 24px;
+    height: 24px;
+    background-color: $darkBlue-900;
+    mask-image: url('../images/sprite.svg#icon-cart');
+    mask-repeat: no-repeat;
+    mask-size: contain;
+    mask-position: center;
+    transition: background-color .3s ease-in-out;
+  }
+
+  &--cart {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-cart');
+    }
+  }
+
+  &--search {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-search');
+    }
+  }
+
+  &--burger {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-category-burger');
+    }
+  }
+
+  &--pizza {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-category-pizza');
+    }
+  }
+
+  &--sandwich {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-category-sandvich');
+    }
+  }
+
+  &--asian {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-category-asia');
+    }
+  }
+
+  &--sets {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-category-dish');
+    }
+  }
+
+  &--send {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-telegram');
+    }
+  }
+
+  &--address {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-location');
+    }
+  }
+
+  &--phone {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-call');
+    }
+  }
+
+  &--mail {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-message');
+    }
+  }
+
+  &--timer {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-timer');
+      background-color: $orange-900;
+    }
+  }
+
+  &--delivery {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-delivery');
+      background-color: #00AAFF;
+    }
+  }
+
+  &--restorant {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-restorant');
+      background-color: #FF2222;
+    }
+  }
+
+  &--time {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-time');
+      background-color: $dark;
+    }
+  }
+
+  &--arrow-right {
+    &::before {
+      mask-image: url('../images/sprite.svg#icon-arrow-right');
+      background-color: $white;
+    }
+  }
+
+  &:hover {
+    &::before {
+      background-color: $white;
+    }
+  }
+
+  &:active {
+    &::before {
+      background-color: $darkBlue-900;
+    }
+  }
+}
+
+.btn-counter {
+  position: absolute;
+  top: 8px;
+  right: 3px;
+  min-width: 14px;
+  height: 14px;
+  border-radius: 7px;
+  color: $white;
+  font-size: 10px;
+  line-height: 1.4;
+  background-color: $orange-900;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.link {
+  font-size: 20px;
+  line-height: 1.5;
+  color: $darkBlue-900;
+  outline: 2px solid transparent;
+  border-radius: 5px;
+  text-decoration: underline;
+  transition: outline-color .3s ease-in-out, color .3s ease-in-out, text-shadow .3s ease-in-out;
+
+  &:focus {
+    outline-color: rgba($orange-900, 0.7);
+  }
+
+  &:hover {
+    color: $orange-900;
+  }
+
+  &:active {
+    text-shadow: 2px 2px 5px rgba($dark, 0.5);
+    outline-color: transparent;
+  }
+}
+
+.logo {
+  display: block;
+  outline: 2px solid transparent;
+  border-radius: 5px;
+  transition: outline-color .3s ease-in-out, opacity .4s ease-in-out;
+
+  &:focus {
+    outline-color: rgba($orange-900, 0.7);
+  }
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.5;
+    outline-color: transparent;
+  }
+
+  &__img {
+    object-fit: contain;
+  }
+}
+
 .title {
-  @extend %rubik-500;
-  font-size: 36px;
+  font-family: 'Rubik', sans-serif;
+  @include fz(36, 24);
   color: $darkBlue-900;
   margin-bottom: 60px;
+  text-align: center;
 }
 
 .sr-only {
@@ -37,32 +297,25 @@ body {
   overflow: hidden;
 }
 
-.logo {
-  transition: box-shadow .5s ease-in-out, opacity .3s linear;
-
-  &:focus {
-    border-radius: 5px;
-    box-shadow: 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
-  }
-
-  &:hover {
-    opacity: 0.8;
-  }
-
-  &:active {
-    opacity: 0.5;
-  }
+.text-orange {
+  color: $orange-900;
 }
 
-.btn {
-  border-radius: 6px;
-  outline: 0;
-  color: #fff;
-  background-color: $orange-900;
-  display: flex;
-  align-items: center;
+.hide {
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  transition-delay: 0.5s;
 }
 
-.link {
-  text-decoration: underline 1px $darkBlue-900;
+.show {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.mb-120 {
+  margin-bottom: 120px;
 }
