--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,13 +1,5 @@
 @font-face {
-  font-family: 'Rubik';
-  src: url('../fonts/Rubik-Light.woff2') format("woff2");
-  font-weight: 300;
-  font-display: swap;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Rubik';
+  font-family: "Rubik";
   src: url('../fonts/Rubik-Regular.woff2') format("woff2");
   font-weight: 400;
   font-display: swap;
@@ -15,7 +7,15 @@
 }
 
 @font-face {
-  font-family: 'Rubik';
+  font-family: "Rubik";
+  src: url('../fonts/Rubik-Light.woff2') format("woff2");
+  font-weight: 300;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Rubik";
   src: url('../fonts/Rubik-Italic.woff2') format("woff2");
   font-weight: 400;
   font-display: swap;
@@ -23,7 +23,7 @@
 }
 
 @font-face {
-  font-family: 'Rubik';
+  font-family: "Rubik";
   src: url('../fonts/Rubik-Medium.woff2') format("woff2");
   font-weight: 500;
   font-display: swap;
