--- a/app/scss/parts/_features.scss
+++ b/app/scss/parts/_features.scss
@@ -6,7 +6,7 @@ $leftPos: calc((100vw - 1170px) / 2);
   align-items: center;
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: left $leftPos center;
+  background-position: 437px center;
 
   &__wrapper {
     display: flex;
@@ -16,8 +16,8 @@ $leftPos: calc((100vw - 1170px) / 2);
     gap: 30px;
     max-width: 470px;
     width: 100%;
-    margin-right: 66px;
     margin-left: auto;
+    margin-right: 69px;
   }
 
   &__title {
@@ -39,6 +39,7 @@ $leftPos: calc((100vw - 1170px) / 2);
 
   &__item {
     gap: 30px;
+    font-size: 24px;
     &::before{
       min-width: 34px;
       height: 34px;
