--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,7 @@
+@import 'fonts';
 @import 'vars';
 @import 'mixins';
 @import 'colors';
-@import 'fonts';
 @import 'reset';
 @import 'libs';
 @import 'global';
@@ -15,4 +15,5 @@
 @import 'parts/restaurants';
 @import 'parts/restaurant-card';
 @import 'parts/testimonials';
+@import 'parts/app';
 @import 'parts/footer';
