--- a/app/html/components/_app.html
+++ b/app/html/components/_app.html
@@ -1,22 +1,26 @@
 <section class="section app mb-120" style="background-image: url(../../images/content/get_app.jpg);">
+  <h2 class="sr-only">Застосунки Simple Food для шкидкого та зручного замовлення їжї</h2>
   <div class="container">
     <div class="app__wrapper">
-      <h2 class="title app__title">
+      <div class="title app__title">
         Завантажте мобільний застосунок
-      </h2>
+      </div>
       <div class="app__text">
-        <p>
-          Ресторани, які ви любите - у ваших руках. Встановлюйте застосунок та замовляйте їжу в зручному місці в зручний час
-        </p>
+        <p>Ресторани, які ви любите - у ваших руках.</p>
+        <p>Встановлюйте застосунок та замовляйте їжу в зручному місці в зручний час</p>
       </div>
-      <div class="app__links">
-        <a class="app__link" href="#" style="background-image: url(../../images/content/app_store.png);">
-          <div class="sr-only">Завантажити додаток в AppStore</div>
-        </a>
-        <a class="app__link app__link--google" href="#" style="background-image: url(../../images/content/play_store.png);">
-          <div class="sr-only">Завантажити додаток у GooglePlay</div>
-        </a>
-      </div>
+      <ul class="app__links">
+        <li class="app__item">
+          <a class="app-icon icon app-icon--apple" href="#" style="background-image: url(../../images/content/app_store.png);" target="_blank">
+            <span class="sr-only">Завантажити додаток в AppStore</span>
+          </a>
+        </li>
+        <li class="app__item">
+          <a class="app-icon icon app-icon--google" href="#" style="background-image: url(../../images/content/play_store.png);" target="_blank">
+            <span class="sr-only">Завантажити додаток у GooglePlay</span>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
 </section>
