--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -278,6 +278,7 @@ body {
 .title {
   font-family: 'Rubik', sans-serif;
   @include fz(36, 24);
+  font-weight: 500;
   color: $darkBlue-900;
   margin-bottom: 60px;
   text-align: center;
@@ -317,4 +318,10 @@ body {
 
 .mb-120 {
   margin-bottom: 120px;
+}
+
+.cols {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
 }
