--- a/app/scss/parts/_app.scss
+++ b/app/scss/parts/_app.scss
@@ -1,45 +1,44 @@
+$rightPos: calc((100vw - 1170px) / 2);
+
 .app {
-  height: 380px;
-  display: flex;
-  align-items: center;
-  background-repeat: no-repeat;
   background-size: contain;
+  background-repeat: no-repeat;
   background-position: right $rightPos center;
 
   &__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: start;
-    flex-wrap: wrap;
-    max-width: 540px;
-    width: 100%;
-    margin-right: 60px;
+    max-width: 470px;
+    padding: 40px 0;
+    background-color: rgba($white, 0.85);
   }
 
   &__title {
     margin-bottom: 45px;
-    text-align: start;
+    text-align: left;
   }
 
   &__text {
-    max-width: 500px;
-    margin-bottom: 30px;
     font-size: 20px;
     line-height: 1.5;
+    margin-bottom: 30px;
   }
 
   &__links {
     display: flex;
     gap: 30px;
   }
+}
 
-  &__link {
-    display: block;
-    width: 120px;
-    height: 40px;
-    &--google{
-      width: 135px;
-    }
+.app-icon {
+  display: block;
+  width: 120px;
+  height: 40px;
+  background-image: url('../../images/app_store.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  &--google {
+    width: 135px;
+    background-image: url('../../images/play_store.png');
   }
 }
