--- a/app/scss/parts/_features.scss
+++ b/app/scss/parts/_features.scss
@@ -1,33 +1,32 @@
-$leftPos: calc((100vw - 1170px) / 2);
-
 .features {
-  height: 585px;
-  display: flex;
-  align-items: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: 437px center;
 
   &__wrapper {
+    min-height: 585px;
+    padding: 0 size(70, 0);
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    gap: 30px;
+    justify-content: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: left size(70, 0) center;
+  }
+
+  &__content {
     max-width: 470px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: 69px;
+    background-color: rgba($white, 0.85);
+    align-self: flex-end;
   }
 
   &__title {
-    margin-bottom: 0;
-    text-align: start;
+    margin-bottom: 30;
+    text-align: left;
   }
 
   &__description {
     font-size: 20px;
     line-height: 1.5;
+    margin-bottom: 30px;
   }
 
   &__list {
@@ -35,12 +34,17 @@ $leftPos: calc((100vw - 1170px) / 2);
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
+    margin-bottom: 30px;
   }
 
   &__item {
-    gap: 30px;
     font-size: 24px;
-    &::before{
+    line-height: 1.5;
+    color: $darkBlue-900;
+    justify-content: flex-start;
+    gap: 30px;
+
+    &::before {
       min-width: 34px;
       height: 34px;
     }
