--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,8 +1,8 @@
-@import 'fonts';
-@import 'vars';
-@import 'mixins';
-@import 'colors';
 @import 'reset';
+@import 'mixins';
+@import 'fonts';
+@import 'colors';
+@import 'vars';
 @import 'libs';
 @import 'global';
 
@@ -13,7 +13,9 @@
 @import 'parts/product-card';
 @import 'parts/features';
 @import 'parts/restaurants';
-@import 'parts/restaurant-card';
-@import 'parts/testimonials';
+@import 'parts/content-card';
+@import 'parts/reviews';
+@import 'parts/quote';
 @import 'parts/app';
+
 @import 'parts/footer';
